Fix Symbol Menu, Top Recent: Horizontal scroll does not support touchpad (#426)

--- a/src/components/left/LeftColumn.scss
+++ b/src/components/left/LeftColumn.scss
@@ -182,11 +182,11 @@
   }
 
   .top-peers {
-    display: flex;
     margin: 0 -1rem 0.25rem;
     overflow-x: auto;
     overflow-y: hidden;
     user-select: none;
+    white-space: nowrap;
 
     scrollbar-width: none;
     scrollbar-color: rgba(0,0,0,0);
@@ -210,9 +210,8 @@
   }
 
   .top-peer-item {
+    display: inline-block;
     width: 4.875rem;
-    flex-grow: 0;
-    flex-shrink: 0;
     padding: 0.75rem 0.25rem;
     margin-left: 0.3125rem;
     border-radius: var(--border-radius-default);
